--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,6 +15,8 @@ pages:
   - master
 
 build:
+        before_script:
+        - apt update && apt -y install cmake autoconf
         script:
         - mkdir cmake-build-debug
         - cd cmake-build-debug
