--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,7 +18,7 @@ build:
         before_script:
         - apk update
         - apk add gcc g++ make cmake
-        - apk add openjdk7-jre
+        - apk add openjdk8
         script:
         - mkdir cmake-build-debug
         - cd cmake-build-debug
